# Doodle_Jump

./: CMakeLists.txt  README.md  sfml_notes.txt  vragen.txt
html/: md__r_e_a_d_m_e.html  pages.html
html/search/: pages_0.js
latex/: refman.tex
src/: main.cpp
src/game_representation/: .BGTile.cpp.un~  .BGTile.h.un~  .EntityView.h.un~  .Game.cpp.un~  .Game.h.un~  BGTile.cpp  BGTile.h  Bonus.cpp  Bonus.h  ComplexEnemy.cpp  ComplexEnemy.h  ConcreteFactory.cpp  ConcreteFactory.h  Data.cpp  Data.h  EntityView.cpp  EntityView.h  Game.cpp  Game.h  HP.cpp  HP.h  Horizontal.cpp  Horizontal.h  HorizontalTeleport.cpp  HorizontalTeleport.h  Jetpack.cpp  Jetpack.h  Platform.cpp  Platform.h  Player.cpp  Player.h  Score.cpp  Score.h  SimpleEnemy.cpp  SimpleEnemy.h  Spike.cpp  Spike.h  Spring.cpp  Spring.h  Static.cpp  (+7 more)
src/logic_library/: #Player.h#  AbstractFactory.cpp  AbstractFactory.h  BGTile.cpp  BGTile.h  Bonus.cpp  Bonus.h  CONSTANTS.cpp  CONSTANTS.h  Camera.cpp  Camera.h  ComplexEnemy.cpp  ComplexEnemy.h  Doodle.cpp  Doodle.h  EVENT.h  EntityModel.cpp  EntityModel.h  HP.cpp  HP.h  Horizontal.cpp  Horizontal.h  HorizontalTeleport.cpp  HorizontalTeleport.h  INPUT.h  Jetpack.cpp  Jetpack.h  Observer.cpp  Observer.h  Platform.cpp  Platform.h  Player.cpp  Player.h  Random.cpp  Random.h  Score.cpp  Score.h  SimpleEnemy.cpp  SimpleEnemy.h  Spike.cpp  (+17 more)
